--- a/sensor-core/build.gradle
+++ b/sensor-core/build.gradle
@@ -13,34 +13,6 @@ android {
         versionName version_readable
         targetSdkVersion target_sdk
         minSdkVersion minimum_sdk
-
-        resValue "string", "provider_accelerometer", "com.aware.provider.accelerometer"
-        resValue "string", "provider_applications", "com.aware.provider.applications"
-        resValue "string", "provider_aware", "com.aware.provider.aware"
-        resValue "string", "provider_barometer", "com.aware.provider.barometer"
-        resValue "string", "provider_battery", "com.aware.provider.battery"
-        resValue "string", "provider_bluetooth", "com.aware.provider.bluetooth"
-        resValue "string", "provider_communication", "com.aware.provider.communication"
-        resValue "string", "provider_esm", "com.aware.provider.esm"
-        resValue "string", "provider_gravity", "com.aware.provider.gravity"
-        resValue "string", "provider_gyroscope", "com.aware.provider.gyroscope"
-        resValue "string", "provider_installations", "com.aware.provider.installations"
-        resValue "string", "provider_keyboard", "com.aware.provider.keyboard"
-        resValue "string", "provider_light", "com.aware.provider.light"
-        resValue "string", "provider_linear_accelerometer", "com.aware.provider.accelerometer.linear"
-        resValue "string", "provider_locations", "com.aware.provider.locations"
-        resValue "string", "provider_magnetometer", "com.aware.provider.magnetometer"
-        resValue "string", "provider_network", "com.aware.provider.network"
-        resValue "string", "provider_processor", "com.aware.provider.processor"
-        resValue "string", "provider_proximity", "com.aware.provider.proximity"
-        resValue "string", "provider_rotation", "com.aware.provider.rotation"
-        resValue "string", "provider_screen", "com.aware.provider.screen"
-        resValue "string", "provider_significant", "com.aware.provider.significant"
-        resValue "string", "provider_telephony", "com.aware.provider.telephony"
-        resValue "string", "provider_temperature", "com.aware.provider.temperature"
-        resValue "string", "provider_timezones", "com.aware.provider.timezone"
-        resValue "string", "provider_traffic", "com.aware.provider.traffic"
-        resValue "string", "provider_wifi", "com.aware.provider.wifi"
     }
 
     signingConfigs {
@@ -66,22 +38,10 @@ android {
 }
 
 dependencies {
-    implementation "org.eclipse.paho:org.eclipse.paho.client.mqttv3:$mqtt_libs"
-    implementation 'com.koushikdutta.ion:ion:2.2.1' //don't update
-    implementation 'com.koushikdutta.async:androidasync:2.2.1'
-
-    implementation "com.google.android.material:material:1.3.0-alpha03"
-    implementation "org.jetbrains.anko:anko:$anko_version"
-
-    implementation "androidx.gridlayout:gridlayout:1.0.0"
-    implementation "androidx.cardview:cardview:1.0.0"
-
     implementation "androidx.annotation:annotation:1.1.0"
-    implementation "androidx.core:core-ktx:1.5.0-alpha05"
-    implementation "com.google.android.material:material:1.3.0-alpha03"
+    implementation "androidx.core:core-ktx:1.3.2"
     implementation "androidx.appcompat:appcompat:1.2.0"
 
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "com.google.android.gms:play-services-location:$play_services_location"
 
