--- a/sensor-core/build.gradle
+++ b/sensor-core/build.gradle
@@ -5,14 +5,14 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion compile_sdk
-    buildToolsVersion build_tools
+    compileSdkVersion 30
+    buildToolsVersion "30.0.2"
 
     defaultConfig {
-        versionCode version_code
-        versionName version_readable
-        targetSdkVersion target_sdk
-        minSdkVersion minimum_sdk
+        minSdkVersion 24
+        targetSdkVersion 30
+        versionCode 1
+        versionName "1.0"
     }
 
     signingConfigs {
@@ -42,9 +42,7 @@ dependencies {
     implementation "androidx.core:core-ktx:1.3.2"
     implementation "androidx.appcompat:appcompat:1.2.0"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "com.google.android.gms:play-services-location:$play_services_location"
-
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.10"
     //activity recognition.
     implementation 'com.google.android.gms:play-services-location:17.1.0'
 
