Gravity sensor added.

--- a/lamp_kotlin/src/main/AndroidManifest.xml
+++ b/lamp_kotlin/src/main/AndroidManifest.xml
@@ -60,5 +60,9 @@
         <service
             android:name="digital.lamp.lamp_kotlin.sensor_core.LinearAccelerometer"
             android:exported="true" />
+
+        <service
+            android:name="digital.lamp.lamp_kotlin.sensor_core.Gravity"
+            android:exported="true" />
     </application>
 </manifest>
