--- a/lamp_kotlin/build.gradle
+++ b/lamp_kotlin/build.gradle
@@ -51,7 +51,7 @@ dependencies {
 
 }
 
-android {
+/*android {
     afterEvaluate {
         publishing {
             publications {
@@ -61,4 +61,4 @@ android {
             }
         }
     }
-}
+}*/
