--- a/lamp_kotlin/src/main/AndroidManifest.xml
+++ b/lamp_kotlin/src/main/AndroidManifest.xml
@@ -64,5 +64,9 @@
         <service
             android:name="digital.lamp.lamp_kotlin.sensor_core.Gravity"
             android:exported="true" />
+
+        <service
+            android:name="digital.lamp.lamp_kotlin.sensor_core.TelephonySensor"
+            android:exported="true" />
     </application>
 </manifest>
