--- a/lamp_kotlin/build.gradle
+++ b/lamp_kotlin/build.gradle
@@ -7,12 +7,12 @@ apply plugin: 'kotlin-parcelize'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 33
     buildToolsVersion "30.0.2"
 
     defaultConfig {
+        compileSdk 34
         minSdkVersion 26
-        targetSdkVersion 33
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
 
